# NoteForge

./: .gitignore  AGENTS.md  API_REFERENCE.md  BUGFIX_GUIDE.md  CHANGELOG.md  CHECKLIST.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DELETE_FIX_SUMMARY.md  DESKTOP_DEPLOYMENT_GUIDE.md  DESKTOP_INTEGRATION_GUIDE.md  FEATURES_IMPLEMENTATION.md  FEATURE_GUIDE.md  FILTER_FIX_COMPLETE.md  FILTER_FIX_GUIDE.md  FINAL_INTEGRATION_REPORT.md  FINAL_UI_OPTIMIZATION.md  FRONTEND_COMPLETION_SUMMARY.md  FRONTEND_INTEGRATION_GUIDE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  OPTIMIZATION_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_IMPLEMENTATION.md  README_START_HERE.md  SEARCH_BOX_FIX_DETAILS.md  SEARCH_INTEGRATION.md  SEARCH_INTEGRATION_COMPLETE.md  SEARCH_PAGINATION_ENHANCEMENT.md  SEARCH_UPGRADE_COMPLETE.md  SEARCH_USER_GUIDE.md  VERSION_CONTROL_COMPLETE_GUIDE.md  VERSION_DELETE_PERSIST.md  rebuild.bat
.github/workflows/: ci.yml  lighthouse.yml  release.yml
UIUX/: desktop-ui-prototype.html  mobile-ui-prototype.html
assets/: desktop-ui-prototype.html  knowledge-base-prototype.html  mobile-ui-prototype.html
backend/: .dockerignore  AGENTS.md  Dockerfile  build.gradle  init.sql  settings.gradle
backend/ai-service/: Dockerfile  build.gradle
backend/common/: build.gradle
backend/gateway/: Dockerfile  build.gradle
backend/note-service/: Dockerfile  build.gradle
backend/user-service/: Dockerfile  build.gradle
core/: Cargo.toml
core/src/: encryption.rs  error.rs  lib.rs  md_engine.rs  metrics.rs  search.rs  storage.rs  types.rs
core/tests/: integration_tests.rs
desktop/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/e2e/: playwright.config.ts  sync.spec.ts
desktop/src/: App.tsx  main.tsx  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  git_history.rs  lib.rs  main.rs
desktop/src-tauri/tests/: git_history_test.rs
docs/: NoteForge-MVP-清单.md  NoteForge-策划案.md  ai-features.md  api-design.md  architecture.md  backend-architecture.md  database-schema.md  deployment.md  desktop-backend-roadmap.md  knowledge-base-design.md  knowledge-base-upgrade-analysis.md  markdown-editor-spec.md  markdown-syntax-demo.md  rust-engine.md  security-audit-report.md  sync-protocol.md  ui-ux-spec.md  updater-setup.md  v1.0-roadmap.md  v2.0-plan.md  v3.0-plan.md
infra/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  init.sql  nginx.conf
infra/prometheus/: prometheus.yml
mobile/: README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/linux/: CMakeLists.txt
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
scripts/: down.ps1  security-audit.ps1  test.ps1  test_api.py  up.ps1
web/: next.config.ts  package-lock.json  package.json
(+337 files in other folders)
