[package]
name = "noteforge-core"
version = "1.0.0"
edition = "2021"

[dependencies]
# Markdown
pulldown-cmark = "0.11"

# Search
tantivy = "0.22"
jieba-rs = "0.7"
unicode-segmentation = "1.12"
lazy_static = "1.4"

# Encryption (AES-256-GCM)
aes-gcm = "0.10"
rand = "0.8"
argon2 = "0.5"
hex = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Local storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
regex-lite = "0.1"
htmlescape = "0.3"

[dev-dependencies]
tempfile = "3"

[lib]
name = "noteforge_core"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
