[package]
name = "noteforge-desktop"
version = "0.1.0"
description = "NoteForge — 全平台智能笔记系统"
authors = ["NoteForge Team"]
edition = "2021"

[lib]
name = "noteforge_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
once_cell = "1"
thiserror = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
